--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "src/text.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.css"
             ],
             "scripts": []
           },
